--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,7 +1,7 @@
-name: astrbot_plugin_angus # 这是你的插件的唯一识别名。
-desc: 这是一个为 AstrBot 开发的综合功能插件合集,集成了多个实用功能,包括智能提醒、主动对话、涩图功能和服务器状态监控等 # 插件简短描述
-version: v1.1.3 # 插件版本号。格式：v1.1.1 或者 v1.1
-author: Angus-fw # 作者
+name: plugin_remind
+desc: 智能提醒、任务插件
+version: v0.0.1
+author: beat4ocean
 
 
-repo: https://github.com/Angus-fw/astrbot_plugin_angus # 插件的仓库地址
+repo: https://github.com/beat4ocean/astrbot_plugin_remind
